# test-service

./: Dockerfile  README.md  main.py  pyproject.toml
.ci/helm/: .sops.yaml  production.values.yaml  secrets.production.values.yaml  secrets.staging.values.yaml  staging.values.yaml
.ci/helm/chart/: values.yaml
.ci/helm/chart/templates/: deployment.yaml  hpa.yaml  ingress.yaml  secret-env.yaml  service.yaml
.github/workflows/: build_deploy.yml
