[project]
name = "simple-raspberrypi-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "ruff>=0.8.4",
    "uvicorn>=0.34.0",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
